react carousel added, + added assets

--- a/src/App.scss
+++ b/src/App.scss
@@ -71,7 +71,15 @@
 
 .hero {
   background-color: olive;
-  width: 100%;
+}
+
+.car-image {
+  width: 720px;
+  height: auto;
+}
+
+.carousel-custom {
+  border: 1px splid green;
 }
 
 //------------Dealerships--------------//
