--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,10 @@
+body {
+  font-family: "Open Sans", Helvetica, Arial, serif;
+}
+
 
 .container {
-  max-width: 1205px; //Check this size again
+  max-width: 1205px; // Note to Kiro: Check this size again
 }
 
 //------------Navigation Menu----------//
@@ -28,10 +32,8 @@
 // Nav links
 .nav-link {
   color: black !important;
-  font-family: "Open Sans", Helvetica, Arial, serif;
   font-weight: 300;
   font-size: 12px;
-  font-family: OpenSans-Light;
 }
 
 .menu-item {
@@ -85,12 +87,12 @@
   width: 100vw;
   position: relative;
   left: calc(-50vw + 50%);
+  margin-top: -200px;
 }
 
 .carousel {
   .slider-wrapper {
-    // margin-top: 2rem;
-    top: 2rem;
+    // margin-top: -200px;
   }
 }
 
@@ -104,11 +106,46 @@
 }
 
 .info {
-  background: black;
-  border: 1px solid #FFFFFF;
-  font-family: OpenSans-Light;
+  background: rgba(0,0,0,0.90);
+  font-weight: 300;
   font-size: 14px;
   color: #FFFFFF;
+  width: 370px;
+  height: 352px;
+  position: relative;
+  z-index: 1;
+  padding-left: 26px;
+  padding-top: 51px;
+  padding-right: 33px;
+ 
+
+  h1 {
+    font-weight: 300;
+    font-size: 42px;
+    color: #FFFFFF;
+    line-height: 62px;
+  }
+
+  .p-light {
+    font-weight: 300;
+  }
+}
+
+.text {
+  text-align: center;
+
+}
+
+.car-model {
+  font-weight: 600;
+  font-size: 16px;
+}
+
+.price-tag {
+  font-weight: 300;
+  font-size: 12px;
+  color: #676767;
+  margin-top: -17px;
 }
 
 //------------Dealerships--------------//
