--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,14 @@
+html {
+  height: 100%
+}
 body {
   font-family: "Open Sans", Helvetica, Arial, serif;
+  min-height: 100%;
 }
 
 
 .container {
-  max-width: 1205px; // Note to Kiro: Check this size again
+  max-width: 1170px;
 }
 
 //------------Navigation Menu----------//
@@ -74,11 +78,6 @@ body {
   margin-top: 82px;
 }
 
-.car-image {
-  // width: 50%;
-  // height: 348px;
-}
-
 .control-dots {
   // Give me some style
 }
@@ -90,11 +89,6 @@ body {
   margin-top: -200px;
 }
 
-.carousel {
-  .slider-wrapper {
-    // margin-top: -200px;
-  }
-}
 
 // All slides
 .slide {
@@ -150,10 +144,40 @@ body {
 
 //------------Dealerships--------------//
 
-.dealership {
-  background-color: indianred;  
+
+//Headline
+.section-title{
+  font-weight: 400;
+  font-size: 24px;
+  letter-spacing: 4.27px;
+  color: black;
 }
 
+.crosshair img {
+  height: 19px;
+  width: 19px;
+}
+
+.headline-container {
+  .headline {
+    display: flex;
+
+    img {
+      margin-right: 11px;
+    }
+  }
+
+
+  p {
+    color: #676767
+  }
+}
+
+.map-sidebar-container {
+  display: flex;
+}
+
+//Google Maps
 // Hide Google Maps Controls
 .gm-svpc,
 .gm-style-mtc,
@@ -162,12 +186,25 @@ body {
 .gm-style-cc {
   display: none;
 }
-
+// Zoom control
 .gmnoprint {
   left: 0px;
   bottom: 180px !important;
 }
-
-img:hover {
-  opacity: 50%;
+.custom-google-map {
+  width: 70%;
 }
+
+//Sidebar
+.sidebar-container {
+  h2 {
+    font-weight: 300;
+    font-size: 20px;
+    color: black;
+  }
+}
+
+
+
+
+
