--- a/src/App.scss
+++ b/src/App.scss
@@ -90,18 +90,26 @@ body {
 }
 
 
-// All slides
-// .slide {
-//   opacity: 50%;
-// }
-// //The Selected Slide
-// .selected {
-//   opacity: 100%;
-// }
-
-.selected, .slide {
-  opacity: 1% !important;
+All slides
+.slide {
+  opacity: 50%;
 }
+//The Selected Slide
+.selected {
+  opacity: 100%;
+}
+
+.carousel-custom {
+    .slide {
+        opacity: 50% !important;
+    }
+    .selected {
+      opacity: 100% !important;
+  }
+  }
+
+
+
 
 .info {
   background: rgba(0,0,0,0.90);
