--- a/src/App.scss
+++ b/src/App.scss
@@ -78,16 +78,16 @@ body {
   margin-top: 82px;
 }
 
-.control-dots {
-  // Give me some style
-}
-
-// .carousel-custom {
-//   width: 100vw;
-//   position: relative;
-//   left: calc(-50vw + 50%);
-//   margin-top: -200px;
+// .control-dots {
+//   // Give me some style
 // }
+
+.carousel-custom {
+  width: 100vw;
+  position: relative;
+  left: calc(-50vw + 50%);
+  margin-top: -200px;
+}
 
 // .carousel-custom {
 //     .slide {
@@ -99,9 +99,9 @@ body {
 //   }
 
 
-.carousel-custom .selected, .carousel-custom .slide {
-  opacity: 100%!important;
-}
+// .carousel-custom .selected, .carousel-custom .slide {
+//   opacity: 100%!important;
+// }
 
 
 
