--- a/src/App.scss
+++ b/src/App.scss
@@ -99,6 +99,10 @@ body {
   opacity: 1!important;
 }
 
+.control-dots {
+  display: none;
+}
+
 //Info bar
 .info {
   background: rgba(0,0,0,0.90);
@@ -181,7 +185,7 @@ body {
   font-weight: 400;
   font-size: 24px;
   letter-spacing: 4.27px;
-  color: black;
+
 }
 
 .crosshair img {
@@ -190,17 +194,18 @@ body {
 }
 
 .headline-container {
+  padding: 5px;
+
   .headline {
     display: flex;
-
     img {
       margin-right: 11px;
     }
   }
 
-
   p {
-    color: #676767
+    color: #676767;
+    font-size: 12px;
   }
 }
 
@@ -338,3 +343,139 @@ body {
     transform: scale(0.001, 0.001);
   }
 }
+
+//Media queries - Tablets
+
+@media screen and (max-width: 992px) {
+  .info {
+    font-size: 12px;
+    width: 300px;
+    height: 300px;
+    padding-left: 20px;
+    padding-top: 35px;
+    padding-right: 33px;
+  
+    h1 {
+      font-weight: 300;
+      font-size: 28px;
+      line-height: 52px;
+    }
+  }
+  
+}
+
+//Media queries - Mobile
+@media screen and (max-width: 768px) {
+  .container {
+    padding: 0px;
+  }
+  .navbar{
+    padding: 5px 5px;
+  }
+  .navbar-brand {
+    display: block;
+    width: 108px;
+    height: 25px;
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    background-size: contain;
+    margin-right: 60px;
+  }
+  .info {
+    width: 100%;
+    height: 100%;
+    font-size: 12px;
+    padding-left: 10px;
+    padding-top: 15px;
+    padding-right: 13px;
+  
+    h1 {
+      font-weight: 300;
+      font-size: 20px;
+      line-height: 32px;
+    }
+    .dots {
+      display: none;
+    }
+  }
+  .hero {
+    margin-top: 0px;
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  .carousel-custom {
+    order:1;
+    width: 100vw;
+    position: relative;
+    left: calc(-50vw + 50%);
+    margin-top: 0;
+  }
+  .text {
+    order: 0;
+  }
+  .carousel-custom {
+    margin-top: 10vh;
+    width: 100vw;
+    position: relative;
+  }
+  
+  .carousel .slider {
+    left: 0%;
+    width: 110vw;
+  }
+
+  .control-dots {
+    display: block;
+    left: -18px;
+  }
+  //Dealership 
+  .dealership-container {
+    height: auto;
+    .headline-container {
+      margin-top: 5px;
+    }
+    .headline {
+      display: flex;
+      img {
+        margin-right: 5px;
+      }
+      p {
+        font-size: 18px;
+        text-align: justify;
+        letter-spacing: -0.2px;
+      }
+    }
+  }
+  .section-title {
+    font-weight: 400;
+    font-size: 22px;
+    letter-spacing: 2.5px;
+  }
+  //Map and sidebar conatiner
+
+  .map-sidebar-container{
+    flex-direction: column;
+
+    .custom-google-map {
+      max-height: 400px;
+      max-width: 100vw;
+      overflow: hidden;
+      padding:10px;
+    }
+
+    .sidebar-container {
+      padding: 30px;
+      width: 100%;
+      max-width: 100vw;
+
+      clear-btn {
+        margin-top: 100px;
+      }
+    }
+    .gmnoprint {
+      display:none;
+    }
+  }
+
+}
+
