--- a/src/App.scss
+++ b/src/App.scss
@@ -277,7 +277,7 @@ body {
       position: absolute;
       width: 40px;
       height: 40px;
-      opacity: 100%;
+      opacity: 1;
     }
     .overlay-none {
       display: none;
@@ -476,5 +476,6 @@ body {
       display:none;
     }
   }
+
 }
 
