--- a/src/App.scss
+++ b/src/App.scss
@@ -205,7 +205,7 @@ body {
 
   p {
     color: #676767;
-    font-size: 12px;
+    font-size: 16px;
   }
 }
 
@@ -480,17 +480,17 @@ body {
 
   //Test area
 
-  .carousel .control-dots .dot {
-  height: 15px;
-  width: 15px;
-  border-radius: 50%;
-  background-color: transparent;
-  border: 1px solid white;
-  }
+  // .carousel .control-dots .dot {
+  // height: 15px;
+  // width: 15px;
+  // border-radius: 50%;
+  // background-color: transparent;
+  // border: 1px solid white;
+  // }
 
-  .carousel .control-dots .dot.selected {
-    background-color: white;
-  }
+  // .carousel .control-dots .dot.selected {
+  //   background-color: white;
+  // }
 
 }
 
