--- a/src/App.scss
+++ b/src/App.scss
@@ -18,6 +18,10 @@ body {
   padding-right: 0px;
 }
 
+.navbar-toggler {
+  border: none;
+}
+
 // Logo
 .navbar-brand {
   background-image: url('./assets/lexus-logo.png');
@@ -366,8 +370,10 @@ body {
 
 //Media queries - Mobile
 @media screen and (max-width: 768px) {
+
   .container {
     padding: 0px;
+    height: 100%;
   }
   .navbar{
     padding: 5px 5px;
@@ -424,11 +430,25 @@ body {
     width: 110vw;
   }
 
+  .carousel .control-dots .dot {
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    background-color: transparent;
+    border: 1px solid white;
+    
+  } 
+
+  .carousel .control-dots .selected {
+    background-color: white;
+  }
+
   .control-dots {
     display: block;
     left: -18px;
-    
+    margin-top: 15x;
   }
+
   //Dealership 
   .dealership-container {
     height: auto;
@@ -469,28 +489,12 @@ body {
       width: 100%;
       max-width: 100vw;
 
-      clear-btn {
-        margin-top: 100px;
+      .clear-btn {
+        margin-top: 7vh;
       }
     }
     .gmnoprint {
       display:none;
     }
   }
-
-  //Test area
-
-  // .carousel .control-dots .dot {
-  // height: 15px;
-  // width: 15px;
-  // border-radius: 50%;
-  // background-color: transparent;
-  // border: 1px solid white;
-  // }
-
-  // .carousel .control-dots .dot.selected {
-  //   background-color: white;
-  // }
-
 }
-
